# TOTPManager

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: global-flags.cmake
src/: Base32.h  HMac.h  Hex.h  main.c
